--- a/blogpost.html
+++ b/blogpost.html
@@ -15,7 +15,7 @@
       <h1>Este es el t&iacute;tulo atractivo e interesante del post</h1>
       <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar
       las cosas incre&iacute;bles que se pueden hacer con las ramas</p>
-      <p><img src="imagenes/equipo.jpg" width="100%"</p>
+      <p><img src="https://static.platzi.com/media/user_upload/team_platzi-b7edea1e-e2ec-4bc1-8603-2d0ef9116ba9.jpg" width="100%"</p>
       <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas.
       Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un
       rockstar. Pero estadisticamente no lo eres... por ahora.</p>
